# warframe-codex

./: .gitignore  .gitmodules  Cargo.toml  index.html  lang_check.txt  lang_check2.txt  query_result.txt  test_query.py
.github/workflows/: build-and-deploy.yml
assets/: CategoryView-BoekV7UP.js  ItemView-DjU1F23H.js  index-C9bS8ahf.css  index-DMzdenwc.js
data/export/: ExportAbilities.json  ExportAchievements.json  ExportAnimals.json  ExportArcanes.json  ExportBoosterPacks.json  ExportBoosters.json  ExportBounties.json  ExportBundles.json  ExportChallenges.json  ExportCodex.json  ExportCreditBundles.json  ExportCustoms.json  ExportDojoRecipes.json  ExportDrones.json  ExportEmailItems.json  ExportFactions.json  ExportFlavour.json  ExportFocusUpgrades.json  ExportFusionBundles.json  ExportGear.json  ExportImages.json  ExportKeys.json  ExportMisc.json  ExportMissionTypes.json  ExportModSet.json  ExportNightwave.json  ExportRailjackWeapons.json  ExportRecipes.json  ExportRegions.json  ExportRelics.json  ExportResources.json  ExportRewards.json  ExportSentinels.json  ExportSyndicates.json  ExportSystems.json  ExportTextIcons.json  ExportTilesets.json  ExportUpgrades.json  ExportVendors.json  ExportVirtuals.json  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AppHeader.vue  ItemCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: data.ts  (+1 more)
src/: config.rs  db.rs  exporter.rs  lib.rs  localizer.rs  relations.rs  resolver.rs  scanner.rs
(+5 files in other folders)
