[package]
name = "warframe-codex"
version = "0.1.0"
edition = "2021"
description = "A comprehensive knowledge base for Warframe game data"

[[bin]]
name = "build-index"
path = "src/bin/build_index.rs"

[dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 文件扫描
walkdir = "2"

# 并行处理
rayon = "1"

# 存储
rusqlite = { version = "0.32", features = ["bundled"] }

# 并发数据结构
dashmap = "6"

# 错误处理
anyhow = "1"

# 进度条
indicatif = { version = "0.17", features = ["rayon"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
